--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ branca==0.2.0
 certifi==2018.4.16
 chardet==3.0.4
 colorama==0.3.9
+cx-Freeze==5.1.1
 decorator==4.1.2
+dj-database-url==0.5.0
 Django==2.0.7
 django-tastypie==0.14.1
 entrypoints==0.2.3
